neo/manifests/whoami/03-ingress-haproxy-tls.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-haproxy-tls
  namespace: whoami
  annotations:
    kubernetes.io/ingress.class: haproxy
#    neo.traefik.io/access-control-policy: "my-acp@app"
spec:
  rules:
    - host: haproxy.tls.docker.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80

  tls:
    - secretName: haproxy-tls
      hosts:
        - haproxy.tls.docker.localhost
