neo/manifests/whoami/03-ingress-nginx-tls.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-nginx-tls
  namespace: whoami
#  annotations:
#    neo.traefik.io/access-control-policy: "my-acp@app"
spec:
  ingressClassName: nginx-k8s
  rules:
    - host: nginx.tls.docker.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80

  tls:
    - secretName: nginx-tls
      hosts:
        - nginx.tls.docker.localhost
