neo/manifests/whoami/03-ingress-traefik.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-traefik
  namespace: whoami
#  annotations:
#    neo.traefik.io/access-control-policy: "my-acp@app"
spec:
  ingressClassName: traefik-lb
  rules:
    - host: traefik.docker.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
